--- a/docs/elysia/market/user/用户信息维护.md
+++ b/docs/elysia/market/user/用户信息维护.md
@@ -75,7 +75,7 @@
 ### response parameters body
 
 <table>
-<tr><th>字段名</th><th>字段中文名</th><th>字段类型</th><th>字段长度</th></tr>
+<tr><th>字段名</th><th>字段中文名</th><th>字段类型</th><th>字段长度</th><th>是否必输</th></tr>
 <tr><td>id</td><td>用户ID</td><td>String</td><td>20</td><td>是</td></tr>
 <tr><td>firstname</td><td>姓氏</td><td>String</td><td>15</td><td>否</td></tr>
 <tr><td>lastname</td><td>名字</td><td>String</td><td>35</td><td>否</td></tr>
