--- a/docs/elysia/market/user/用户管理.md
+++ b/docs/elysia/market/user/用户管理.md
@@ -19,10 +19,10 @@
 
 ## 服务信息
 该微服务用于管理用户，包含用户信息的一切操作：
-[[用户注册]]
-[[用户信息维护]]
-[[用户重置密码]]
-[[用户注销]]
+- [[用户注册](用户注册.md)]
+- [[用户信息维护](用户信息维护.md)]
+- [[用户重置密码](用户重置密码.md)]
+- [[用户注销](用户注销.md)]</br>
 
 ## 系统模块
 位于elysia-market-user模块中，隶属于elysia-market系统
